--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.2",
-    "cheerio": "^1.0.0-rc.12",
-    "request": "^2.88.2"
+    "cheerio": "^1.0.0-rc.12"
   }
 }
